--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>exam_papers-plane</title>
+    <title>exam_papers-website</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +35,7 @@
     <section class="attribution">
       <span>
         <h1> 
-          Which nation do students hate the most? Exami-nation. Of course, we couldn’t leave out some old exam papers to showcase the school’s history. For all the history students, how would you say today’s questions compare to these?
+          (description)
   
           </h1>
     </section>
